# SEO

./: AMELIORATIONS_EXTRACTION.md  CLAUDE.md  README.md  TODO.md  debug_cache.py  pyproject.toml  run_dashboard.py  test_case_study.py  test_complete_case_study.py  test_new_analysis.py
dashboard/: README.md  app.py  style.py
dashboard/components/: charts.py
dashboard/pages/: 1_🔍_Analyse_Détaillée.py  2_📊_Comparaisons.py  3_➕_Nouvelle_Analyse.py  4_📄_Pages_Sauvegardées.py  5_🔬_Études_de_Cas.py
dashboard/utils/: data_loader.py
data/pages/: ag2rlamondiale.fr_assurance-vie_conseil-quels-sont-les-avantages-d-une-assurance-vie_20250807_141713.html  ag2rlamondiale.fr_assurance-vie_conseil-quels-sont-les-avantages-d-une-assurance-vie_20250807_141713_metadata.json  carac.fr_actualites_assurance-vie_les-nombreux-avantages-de-l-assurance-vie_20250807_141939.html  carac.fr_actualites_assurance-vie_les-nombreux-avantages-de-l-assurance-vie_20250807_141939_metadata.json  example.com_20250807_140529_metadata.json  example.com_20250808_104228_metadata.json  httpbin.org_html_20250807_142729_metadata.json  placement.meilleurtaux.com_assurance-vie_20250807_140857.html  placement.meilleurtaux.com_assurance-vie_20250807_140857_metadata.json  placement.meilleurtaux.com_assurance-vie_meilleure-assurance-vie_meilleurtaux-allocation-vie.html_20250808_094932.html  placement.meilleurtaux.com_assurance-vie_meilleure-assurance-vie_meilleurtaux-allocation-vie.html_20250808_094932_metadata.json  (+4 more)
reports/raw/: rapport_example.com.json  (+13 more)
src/: analyseur.py  config.py  page_analyzer.py
(+54 files in other folders)
